Basic homepage added

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -7,9 +7,11 @@
 
   <!-- Include the styles for the Netlify CMS UI, after your own styles -->
   <link rel="stylesheet" href="https://unpkg.com/netlify-cms@^1.0.0/dist/cms.css" />
-
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700');
+  </style>
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-  
+
 </head>
 <body>
   <!-- Include the script that builds the page and powers Netlify CMS -->
